added delete poi and update docs
